--- a/pickup.html
+++ b/pickup.html
@@ -44,7 +44,7 @@
           </ul>
           <ul class="header__top__container__getintouch">
             <li class="header__top__container__getintouch__item">
-              <a class="header__top__getintouch__item__link getintouch__city link--grey" href="#" alt="Выбрать город">Москва</a>
+              <span class="header__top__getintouch__item__link getintouch__city link--grey" onclick="window.City.showModal();" aria-controls="City" alt="Выбрать город">Москва</span>
             </li>
             <li class="header__top__container__getintouch__item">
               <a class="header__top__getintouch__item__link link--grey getintouch__phone change_phone" href="tel:+74996476144" alt="Телефон">+ 7 499 647-61-44</a>
