--- a/product.html
+++ b/product.html
@@ -1222,8 +1222,8 @@
           <span class="popup_pickup__info__item icon--days">Понедельник&mdash;воскресенье</span>
           <span class="popup_pickup__info__item icon--hours">11:00&mdash;20:00</span>
         </div>
-        <div class="popup_pickup__info__map" id="popup_pickup__info__map"></div>
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95f762cd1b2901d9765805705d3a5c157235081e11f563b4d8b358b06b0ce2bc&amp;width=100%25&amp;height=450&amp;id=popup_pickup__info__map&amp;lang=ru_RU&amp;scroll=true"></script>
+        <div class="popup_pickup__info__map" id="popup_pickup__map"></div>
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A95f762cd1b2901d9765805705d3a5c157235081e11f563b4d8b358b06b0ce2bc&amp;width=100%25&amp;height=450&amp;id=popup_pickup__map&amp;lang=ru_RU&amp;scroll=true"></script>
       </div>
     </dialog>
     <script src="./js/custom.js"></script>
