--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="header__bottom__container__column column__right">
             <ul class="header__bottom__container__column__services">
               <li class="header__bottom__container__column__services__item">
-                <a class="header__bottom__container__column__services__item__link link--grey link_icon--search" href="#">Поиск</a>
+                <span class="header__bottom__container__column__services__item__link link--grey link_icon--search" onclick="window.Search.showModal();" aria-controls="Search" alt="Поиск">Поиск</s>
               </li>
               <li class="header__bottom__container__column__services__item">
                 <a class="header__bottom__container__column__services__item__link link--grey link_icon--favourites" href="#">Избранное</a>
@@ -165,7 +165,7 @@
       </div>
       <div class="header__mobile mobile--grid">
         <div class="header__mobile__item">
-          <span class="header__mobile__item__icon icon--search-white"></span>
+          <span class="header__mobile__item__icon icon--search-white" onclick="window.Search.showModal();" aria-controls="Search" alt="Поиск"></span>
         </div>
         <div class="header__mobile__item">
           <span class="header__mobile__item__icon icon--heart-white"></span>
@@ -693,7 +693,7 @@
         <span class="popup_city__container__button button button--black">Санкт-Петербург</span>
       </div>
     </dialog>
-    <dialog class="popup_cart popup" aria-label="Товар добавлен в корзину" id="Cart">
+    <dialog class="popup_search popup" aria-label="Товар добавлен в корзину" id="Cart">
       <div class="popup_cart__container popup__container">
         <span class="popup_cart__container__heading">Товар добавлен в корзину</span>
         <span class="popup_cart__container__close icon--close" onclick="window.Cart.close();"></span>
@@ -716,6 +716,167 @@
         </div>
         <a class="popup_cart__container__button--order button button--pink" href="../cart.html">Перейти в корзину</a>
         <span class="popup_cart__container__button--close  button button--white" onclick="window.Cart.close();">Остатья в каталоге</span>
+      </div>
+    </dialog>
+    <dialog class="popup_search popup" aria-label="Поиск товара" id="Search">
+      <div class="popup_search__container">
+        <div class="popup_search__container__top">
+          <div class="popup_search__container__top__heading">Поиск</div>
+          <span class="popup_search__container__top__close icon--close" onclick="window.Search.close();"></span>
+        </div>
+        <form class="popup_search__container__form">
+          <input class="popup_search__container__form__input" placeholder="Название, артикул или код товара" />
+          <button class="popup_search__container__form__button button button--pink">Найти</button>
+        </form>
+        <ul class="popup_search__container__queries">
+          <li class="popup_search__container__queries__item">часы</li>
+          <li class="popup_search__container__queries__item">умные часы</li>
+          <li class="popup_search__container__queries__item">apple</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+          <li class="popup_search__container__queries__item">Label</li>
+        </ul>
+
+        <div class="popup_search__container_suggestions suggestions__container">
+          <span class="popup_search__suggestions__container__heading section_heading">Выбор покупателей</span>
+            <ul class="popup_search__suggestions__container__list">
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images product-slider">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/gamepad.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Sony DualSense PS5 Controller, «полуночный черный»</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images product-slider" id="product-slider-2">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/good-face.jpg" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Умные часы Apple Watch Ultra GPS + Cellular, 49 мм, корпус из титана, ремешок Alpine зеленого цвета S</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images" id="product-slider-3">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/lego.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">LEGO Minifigures Marvel Series 2</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images" id="product-slider-4">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/case.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Чехол Apple MagSafe для iPhone 12/12 Pro, кожа, золотисто-коричневый</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/vinil.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Sony PS-LX310BT</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/vinil.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Sony PS-LX310BT</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+              </li>
+              <li class="popup_search__suggestions__container__list__item">
+                <div class="popup_search__suggestions__container__list__item__images" id="product-slider-5">
+                  <a class="popup_search__suggestions__container__list__item__images__link" href="../product.html">
+                    <img class="popup_search__container_suggestions__list__item__images__link__image" src="./images/goods/vinil.png" />
+                  </a>
+                </div>
+                <div class="popup_search__suggestions__container__list__item__text">
+                  <a class="popup_search__suggestions__container__list__item__text__title" href="../product.html">Sony PS-LX310BT</a>
+                  <div class="popup_search__suggestions__container__list__item__text__info">
+                    <div class="popup_search__suggestions__container__list__item__text__info__prices">
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__price">645&nbsp;000&nbsp;₽</span>
+                      <span class="popup_search__suggestions__container__list__item__text__info__prices__oldprice">667&nbsp;000&nbsp;₽</span>
+                    </div>
+                  </div>
+                </div>
+                <a class="popup_search__suggestions__container__list__item__add_to_favourites--added" href="#heart"></a>
+              </li>
+            </ul>
+          <div class="popup_search__suggestions__container__arrows arrows">
+            <span class="popup_search__suggestions__container__arrows__left arrows--left"></span>
+            <span class="popup_search__suggestions__container__arrows__right arrows--right"></span>
+          </div>
+        </div>
+
+        <a class="popup_search__container__link_results" href="#">Смотреть все результаты</a>
       </div>
     </dialog>
     <script src="./js/custom.js"></script>
